[gd_scene load_steps=6 format=2]

[ext_resource path="res://_resources/free_duel/duelist_slot.png" type="Texture2D" id=1]
[ext_resource path="res://_resources/fonts/BankGothic Md BT.ttf" type="FontFile" id=2]
[ext_resource path="res://_scripts/duelist_slot.gd" type="Script" id=3]
[ext_resource path="res://_resources/character_faces/yugi0.png" type="Texture2D" id=4]

[sub_resource type="FontFile" id=11]
size = 24
outline_size = 2
font_data = ExtResource( 2 )

[node name="duelist_slot" type="Button"]
offset_right = 372.0
offset_bottom = 98.0
custom_minimum_size = Vector2( 372, 98 )
focus_mode = 0
focus_mode = 0
flat = true
script = ExtResource( 3 )

[node name="background" type="Sprite2D" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="duelist_face" type="Sprite2D" parent="."]
position = Vector2( 49, 49 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 4 )

[node name="duelist_name" type="Label" parent="."]
offset_left = 97.0
offset_top = 22.0
offset_right = 355.0
offset_bottom = 54.0
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 11 )
text = "Yugi Muto"
valign = 1

[node name="win_count" type="Label" parent="."]
offset_left = 117.0
offset_top = 57.0
offset_right = 246.0
offset_bottom = 89.0
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 11 )
text = "W: 0"
valign = 1

[node name="loss_count" type="Label" parent="."]
offset_left = 253.0
offset_top = 57.0
offset_right = 363.0
offset_bottom = 89.0
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 11 )
text = "L: 0"
valign = 1

[connection signal="button_up" from="." to="." method="_on_duelist_slot_button_up"]
